fix text wrap

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
   background: #ffffff;
-  max-width: 85ch;
   margin: auto;
   margin-top: 12px;
+  margin-right: 12px;
   font-family: Iosevka;
   font-size: 0.9em;
 }
@@ -75,13 +75,12 @@ main {
 	background-color: #ffffff;
 	padding: 1em;
   	font-family: Iosevka;
+	max-width: 80ch;
 }
 
 main p {
 	line-height: 1.4em;
 	font-family: Helvetica, Verdana, sans-serif;
-	max-width: 80ch;
-
 }
 
 blockquote {
